...
            selectedIcon: _BloomingNavIcon(Icons.forum_rounded),
            label: '心语',
          ),
          NavigationDestination(
            icon: Icon(Icons.photo_album_outlined),
            selectedIcon: _BloomingNavIcon(Icons.photo_album),
            label: '回忆',
          ),
          NavigationDestination(
            icon: Icon(Icons.bubble_chart_outlined),
            selectedIcon: _BloomingNavIcon(Icons.bubble_chart),
            label: '心情',
          ),
        ],
      ),
    );
  }
}
...
